--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-netlify": "^2.11.0",
     "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-preact": "^4.7.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^3.2.0",
