update packages and warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
         "abandoned_articles": true,
         "tsconfig.json": true,
         "node_modules": true,
-        "package.json": true,
+        // "package.json": true,
         "gatsby-config.js": true
     },
     "search.exclude":{
