--- a/package.json
+++ b/package.json
@@ -26,29 +26,29 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome": "^1.1.8",
-        "@fortawesome/fontawesome-svg-core": "^6.1.1",
-        "@fortawesome/free-brands-svg-icons": "^6.1.1",
-        "@fortawesome/react-fontawesome": "^0.1.18",
-        "bootstrap": "^5.1.3",
-        "email-js": "^2.0.2",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "bootstrap": "^5.3.3",
+        "email-js": "^2.0.3",
         "emailjs-com": "^3.2.0",
-        "gatsby": "^4.11.2",
-        "gatsby-image": "^3.11.0",
-        "gatsby-plugin-manifest": "^4.11.1",
-        "gatsby-plugin-netlify": "^4.2.0",
-        "gatsby-plugin-offline": "^5.11.1",
-        "gatsby-plugin-preact": "^6.11.0",
-        "gatsby-plugin-purgecss": "^6.1.2",
-        "gatsby-plugin-react-helmet": "^5.11.0",
-        "gatsby-plugin-sass": "^5.11.1",
-        "gatsby-plugin-sharp": "^4.11.1",
-        "gatsby-source-filesystem": "^4.11.1",
-        "gatsby-transformer-sharp": "^4.11.0",
-        "node-sass": "^6.0.1",
+        "gatsby": "^5.14.1",
+        "gatsby-plugin-image": "^3.14.0",
+        "gatsby-plugin-manifest": "^5.14.0",
+        "gatsby-plugin-netlify": "^5.1.1",
+        "gatsby-plugin-offline": "^6.14.0",
+        "gatsby-plugin-preact": "^7.14.0",
+        "gatsby-plugin-purgecss": "^6.2.1",
+        "gatsby-plugin-react-helmet": "^6.14.0",
+        "gatsby-plugin-sass": "^6.14.0",
+        "gatsby-plugin-sharp": "^5.14.0",
+        "gatsby-source-filesystem": "^5.14.0",
+        "gatsby-transformer-sharp": "^5.14.0",
         "prop-types": "^15.8.1",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-helmet": "^6.1.0"
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-helmet": "^6.1.0",
+        "sass": "^1.83.1"
     },
     "devDependencies": {
         "prettier": "^2.6.2"
