updated gatsby-config for mp3s

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,20 @@
 {
     "files.exclude": {
-        ".cache": true,
-        "public": true,
-        ".gitignore": true,
-        ".prettierignore": true,
-        ".prettierrc": true,
-        "LICENSE": true,
-        "README.md": true,
-        "old": true,
-        "config.yml": true,
-        "package-lock.json": true,
-        "abandoned_articles": true,
-        "tsconfig.json": true,
-        "node_modules": true,
-        // "package.json": true,
-        "gatsby-config.js": true
+        // ".cache": true,
+        // "public": true,
+        // ".gitignore": true,
+        // ".prettierignore": true,
+        // ".prettierrc": true,
+        // "LICENSE": true,
+        // "README.md": true,
+        // "old": true,
+        // "config.yml": true,
+        // "package-lock.json": true,
+        // "abandoned_articles": true,
+        // "tsconfig.json": true,
+        // "node_modules": true,
+        // // "package.json": true,
+        // "gatsby-config.js": true
     },
     "search.exclude":{
         "/node_modules": false,
