--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,6 @@
         // "gatsby-config.js": true
     },
     "search.exclude":{
-        "/node_modules": false,
+        // "/node_modules": false,
     }
 }
